# pgi

./: .gitignore  .travis.yml  MANIFEST.in  NEWS  README  README.md  README.rst  a.py  example.py  pyproject.toml  setup.py  test.py  tests.py
benchmarks/: __init__.py
debian/: changelog  control  copyright
docs/: Makefile  conf.py  index.rst
examples/: LICENSE  dump_typelib.py  example.py  gi_example.py  tdiff.py  tdump.py
examples/cairo/: shapes.py  text.py
examples/clutter/: README  test-shader.py  test-text.py
examples/gtk/: README  button_example.py  checkbutton_example.py  dialog_example.py  entry_example.py  filechooserdialog_example.py  layout_box_example.py  layout_grid_example.py  layout_table_example.py  linkbutton_example.py  menu_example.py  radiobutton_example.py  spinner_example.py  (+2 more)
gitypes/: __init__.py  _util.py  giarginfo.py  giargument.py  gibaseinfo.py  gicallableinfo.py  giconstantinfo.py  gienuminfo.py  gifieldinfo.py  giinterfaceinfo.py  giobjectinfo.py  gipropertyinfo.py  giregisteredtypeinfo.py  girepository.py  gistructinfo.py  gitypeinfo.py  gitypelib.py  glib.py  gobject.py
pgi/: __init__.py  _compat.py  callback.py  const.py  constant.py  ctypesutil.py  enum.py  field.py  finalizer.py  foreign.py  function.py  gerror.py  gtype.py  importer.py  module.py  obj.py  properties.py  signals.py  static.py  structure.py  union.py  util.py  vfunc.py
tests/: README  __init__.py  pgi_coverage.py  pgi_covergage.py  test_const.py  test_flags.py  test_funcs.py  test_misc.py  test_objects.py  test_pep8.py  test_properties.py  test_pyflakes.py
(+196 files in other folders)
